# Ape

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/assets/meshes/: apetown.mesh  apetown2.mesh
data/assets/shader/: GameObjStandard.cg  textureColorBalance.frag  textureColorBalance.material  textureColorBalance.vert
data/assets/surfaces/: surfaces.txt
data/dummy/cameraStream/: marker01.avi  out
libs/: setupLibs.bat  setupLibs.sh
libs/misc/: fastNoise_CMakeLists.txt
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/ape/: CMakeLists.txt
src/application/ape/desktop/: CMakeLists.txt  ape.cpp
src/application/ape/sections/: CMakeLists.txt
src/application/ape/sections/appState/: AppStateController.cpp  AppStateController.h
src/application/ape/sections/appState/fsm/: LoadingScreenState.cpp  LoadingScreenState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h  TextureSynthesisState.cpp  TextureSynthesisState.h  WorldScreenState.cpp  WorldScreenState.h
src/application/imageProcessing/component/: CMakeLists.txt  ProcessingContextImplementation.cpp  ProcessingContextImplementation.h  colorSpaces.cpp  colorSpaces.h  cvImageProcessing.cpp  cvImageProcessing.h  imageProcessing.cpp  imageProcessing.h  imageTools.cpp  imageTools.h
src/application/imageProcessing/component/smoothing/: ISmoother.h  MeanSmoother.h  TransformationSmoother.h
src/application/imageProcessing/examples/: CMakeLists.txt
src/application/imageProcessing/examples/cameraCalibration/: CMakeLists.txt  cameraCalibration.cpp
src/application/imageProcessing/examples/color/: CMakeLists.txt  color.cpp
src/application/imageProcessing/examples/textureSynthesis/: CMakeLists.txt  textureSynthesis.cpp
src/application/textureGen/: CMakeLists.txt
src/application/visualization/component/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  visualization.cpp  visualization.h  visualizationOGRE.cpp  visualizationOGRE.h
src/application/visualization/component/stages/: LoadingControllerStage.cpp  LoadingControllerStage.h  Stage.cpp  Stage.h  SurfaceSelectionStage.cpp  SurfaceSelectionStage.h  TextureSynthesisSelectionStage.cpp  TextureSynthesisSelectionStage.h  WorldScreenStage.cpp  WorldScreenStage.h
src/application/visualization/examples/: CMakeLists.txt
src/application/visualization/examples/demoScene/: CMakeLists.txt  demoScene.cpp
src/application/worldState/component/: CMakeLists.txt  SurfaceImplementation.cpp  SurfaceImplementation.h  worldFileBasedState.cpp  worldFileBasedState.h  worldState.cpp  worldState.h  worldStateImplementation.cpp  worldStateImplementation.h
src/common/: CMakeLists.txt  math_defines.h
src/components/: CMakeLists.txt
src/components/imageProcessing/: CMakeLists.txt  FileCameraStream.cpp  FileCameraStream.h  ImageProcessor.cpp  ImageProcessor.h  LazyCameraStream.cpp  LazyCameraStream.h  OpenCVCameraStream.cpp  OpenCVCameraStream.h  TextureExtraction.h  TextureSynthesis.cpp  TextureSynthesis.h  image_tools.cpp  image_tools.h
src/components/imageProcessing/textureSynthesis/: TextureExtraction.cpp  TextureSynthesis.cpp  TextureSynthesis.h
src/components/textureGen/: CMakeLists.txt
src/components/visualization/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  OgreRay.cpp  OgreRay.h  SceneController.cpp
src/components/visualization/Overlay/: OgreShapes.cpp  OgreShapes.h
src/components/visualization/overlay/: OgreButton.cpp  OgreButton.h  OgreShapes.cpp  OgreShapes.h  Shapes.cpp  Shapes.h
src/components/visualization/visualModel/: OgreVisualModel.cpp  OgreVisualModel.h
src/components/worldState/: CMakeLists.txt  TerrainGenerator.cpp  TerrainGenerator.h
src/components/worldState/model/: ModelBasedWorld.cpp  ModelBasedWorld.h  ModelBasedWorldEntity.cpp  ModelBasedWorldEntity.h  World.cpp  World.h
src/interfaces/: CMakeLists.txt
src/interfaces/common/callbacks/: CustomValueCallback.h
src/interfaces/common/generators/: Counter.cpp  Counter.h  Generator.h
src/interfaces/common/signals/: Signal.h
src/interfaces/imageProcessing/: CameraStream.h  ProcessingContext.h
src/interfaces/visualization/: VisualModel.h
src/interfaces/visualization/overlay/: Shapes.cpp  Shapes.h
src/interfaces/worldState/: Surface.h  World.h  WorldEntity.h
